--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -12,7 +12,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <link rel="stylesheet" href="./css/prefixed/main.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -23,7 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Ho Ho</title>
+  <title>Unlock the Magic of Giving! 🎁 Secret Santa Gift Ideas 2023 by Ho-Ho! 🎅🏻</title>
+  <meta name="description"
+    content="Elevate your Secret Santa experience with our Gift Idea Generator. Answer a few questions, discover budget-friendly gift suggestions, and surprise your loved ones during your gift exchange. Unwrap the joy of giving with Ho-Ho!." />
+  <meta name="keywords"
+    content="Secret Santa, Ho-Ho!, Gift ideas for gift exchange, Surprise gifts, Find the perfect Secret Santa gift, Unique gift ideas for secret friends, Budget-friendly gifts for gift exchange, Personalized gift ideas for colleagues, Gift suggestions for secret pals, Christmas, Perfect surprise " />
 </head>
 
 <body>
